feat: Add Supabase integration and initial database schema
- Updated package.json to include Supabase and Chakra UI dependencies.
- Created supabase.js for Supabase client configuration.
- Added initial database schema for users, memories, media, reports, translations, and moderators.
- Implemented row-level security policies for user access control.

--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.30.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.89.0",
+    "framer-motion": "^12.23.26",
+    "franc": "^6.2.0",
+    "mapbox-gl": "^3.17.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.11.0",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
