--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "supercluster": "^8.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
