--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@chakra-ui/react": "^3.30.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mapbox/mapbox-gl-geocoder": "^5.1.2",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.89.0",
+    "browser-image-compression": "^2.0.2",
     "framer-motion": "^12.23.26",
     "franc": "^6.2.0",
     "mapbox-gl": "^3.17.0",
